--- a/src/styling/article.styling.css
+++ b/src/styling/article.styling.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-align: left;
+  
     font-family: -apple-system,
     BlinkMacSystemFont,
     "Segoe UI",
@@ -21,6 +21,7 @@
   flex-wrap: wrap;
   flex-direction:column;
   justify-content: space-between;
+  text-align: left;
 }
 
 .card {
@@ -66,4 +67,12 @@
 .card_votes {
   grid-column: 1/2;
   grid-row: 4/4;
+}
+
+.topic_header {
+    margin: 10px 0px;
+    color: #888888;
+    font-size: 25px;
+    transition: all 0.5s;
+    text-align: center;
 }
