--- a/src/styling/header.styling.css
+++ b/src/styling/header.styling.css
@@ -4,4 +4,24 @@
     box-sizing: border-box;
     text-align: center;
     font-weight: 600;
+    color: black;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+
+a:visited {
+    text-decoration: none;
+}
+
+
+a:hover {
+    text-decoration: none;
+}
+
+
+a:active {
+    text-decoration: none;
 }
