--- a/src/styling/article.styling.css
+++ b/src/styling/article.styling.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -28,7 +27,8 @@
   margin: 10px;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding: 30px;
+  padding-bottom: 0px;
   width: 700px;
   min-height: 200px;
   display: grid;
@@ -62,11 +62,13 @@
   grid-column: 2/2;
   grid-row: 4/4;
   text-align: right;
+  color: black;
 }
 
 .card_votes {
   grid-column: 1/2;
   grid-row: 4/4;
+  color: black;
 }
 
 .topic_header {
@@ -75,4 +77,63 @@
     font-size: 25px;
     transition: all 0.5s;
     text-align: center;
+}
+
+.article_box {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction:column;
+    justify-content: space-between;
+    text-align: left;
+    width: 700px;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    padding-bottom: 0px;
+}
+
+.article_box2 {
+  display: grid;
+  grid-template-columns: 350px 350px;
+  padding: 5px 10px 15px 10px;
+}
+.article_author {
+  text-align: left;
+}
+
+.article_date {
+  text-align: right;
+}
+
+.article_interactions {
+  display: grid;
+  grid-template-columns: 350px 350px; 
+}
+
+.article_votes{
+  text-align: left;
+}
+
+.article_comments {
+  text-align: right;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+
+a:visited {
+  text-decoration: none;
+}
+
+
+a:hover {
+  text-decoration: none;
+}
+
+
+a:active {
+  text-decoration: none;
 }
