--- a/src/styling/nav.styling.css
+++ b/src/styling/nav.styling.css
@@ -27,10 +27,11 @@
 }
 
 .nav_topic {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding-top: 4%;
     padding-bottom: 4%;
-    width: 200px;
+    width: 150px;
     min-height: 75px;
     display: inline;
     border-radius: 10px;
