--- a/src/styling/article.styling.css
+++ b/src/styling/article.styling.css
@@ -14,6 +14,14 @@
     "Segoe UI Emoji",
     "Segoe UI Symbol";
 }
+.card_sort {
+    text-align: left;
+      margin-left: auto;
+      margin-right: auto;
+      padding-bottom: 0px;
+      width: 700px;
+      display: grid;
+}
 
 .cards {
   display: flex;
@@ -76,7 +84,10 @@
     color: #888888;
     font-size: 25px;
     transition: all 0.5s;
-    text-align: center;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
 }
 
 .article_box {
