--- a/src/styling/comment.styling.css
+++ b/src/styling/comment.styling.css
@@ -80,8 +80,8 @@ transition: all 0.2s;
 
 .comment_input {
     width: 540px;
-    margin-left: 30px
-
+    margin-left: 30px;
+    border-radius: 5px;
 }
 
 .comment_submit {
@@ -91,18 +91,27 @@ transition: all 0.2s;
 }
 
 .comment_button {
-    width: 75px
+    width: 75px;
+    border-radius: 5px;
+    border-style: none;
 }
 
 .comment_votes {
-    padding-left: 10px;
+    padding-left: 7px;
+    padding-right: 7px;
     position:relative; left: 0px;
+    border-radius: 5px;
+    border-style: none;
+    background-color: orange;
 }
 
 .comment_delete {
     width: 50px;
     float: right;
     margin-left: 10px;
+    border-radius: 5px;
+    border-style: none;
+    background-color: #FF726F;
 }
 
 .comment_interaction {
