--- a/src/styling/header.styling.css
+++ b/src/styling/header.styling.css
@@ -1,10 +1,13 @@
 .header{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-align: center;
-    font-weight: 600;
-    color: black;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: -10px;
 }
 
 a:link {
