--- a/src/styling/comment.styling.css
+++ b/src/styling/comment.styling.css
@@ -14,6 +14,7 @@
         "Segoe UI Emoji",
         "Segoe UI Symbol";
 }
+
 .comment_header {
     text-align: left;
     margin-left: 30px;
@@ -30,7 +31,7 @@
 margin-left: auto;
 margin-right: auto;
 padding: 20px 30px 0px 30px;
-width: 700px;
+width: 60%;
 display: grid;
 grid-template-rows: 5px 18px 1fr 20px;
 transition: all 0.2s;
@@ -73,13 +74,13 @@ transition: all 0.2s;
     flex-wrap: wrap;
     flex-direction: row;
     text-align: center;
-    width: 700px;
+    width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 
 .comment_input {
-    width: 540px;
+    width: 70%;
     margin-left: 30px;
     border-radius: 5px;
 }
