--- a/src/styling/nav.styling.css
+++ b/src/styling/nav.styling.css
@@ -21,7 +21,7 @@
     flex-direction: row;
     justify-content: space-between;
     text-align: center;
-    width: 700px;
+    width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -31,8 +31,8 @@
     margin-bottom: 20px;
     padding-top: 4%;
     padding-bottom: 4%;
-    width: 150px;
-    min-height: 75px;
+    width: 22%;
+    min-height: 11%;
     display: inline;
     border-radius: 10px;
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
